feat: extended tests fix: fixed for testing