@@ -1,27 +1,31 @@
 package de.uniks.stpmon.team_m.controller.subController;
 
 import de.uniks.stpmon.team_m.App;
+import de.uniks.stpmon.team_m.controller.IngameController;
 import de.uniks.stpmon.team_m.dto.*;
+import de.uniks.stpmon.team_m.dto.Map;
 import de.uniks.stpmon.team_m.service.MonstersService;
 import de.uniks.stpmon.team_m.service.PresetsService;
+import de.uniks.stpmon.team_m.service.TrainersService;
 import de.uniks.stpmon.team_m.utils.TrainerStorage;
 import io.reactivex.rxjava3.core.Observable;
+import javafx.collections.FXCollections;
+import javafx.scene.layout.StackPane;
 import javafx.stage.Stage;
 import okhttp3.ResponseBody;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.Spy;
+import org.mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.testfx.framework.junit5.ApplicationTest;
 
 import javax.inject.Provider;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Locale;
-import java.util.ResourceBundle;
+import java.util.*;
+import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -34,9 +38,15 @@ public class MonstersListControllerTest extends ApplicationTest {
     @Mock
     MonstersService monstersService;
     @Mock
+    TrainersService trainersService;
+    @Mock
     Provider<TrainerStorage> trainerStorageProvider;
     @Mock
     Provider<PresetsService> presetsServiceProvider;
+    @Mock
+    IngameController ingameController;
+
+    private List<Monster> monsters;
 
     @Override
     public void start(Stage stage) {
@@ -50,12 +60,34 @@ public class MonstersListControllerTest extends ApplicationTest {
         abilities.put("3", 20);
         abilities.put("6", 25);
         abilities.put("7", 15);
-        List<Monster> monsters = List.of(
+        monsters = List.of(
                 new Monster("2023-06-05T17:02:40.357Z",
                         "023-06-05T17:02:40.357Z",
                         "647e1530866ace3595866db2",
                         "647e15308c1bb6a91fb57321",
                         1,
+                        1,
+                        0,
+                        abilities,
+                        new MonsterAttributes(14, 8, 8, 5),
+                        new MonsterAttributes(14, 8, 8, 5),
+                        List.of()),
+                new Monster("2023-06-05T17:02:40.357Z",
+                        "023-06-05T17:02:40.357Z",
+                        "647e1530866ace3595866500",
+                        "647e15308c1bb6a91fb57321",
+                        2,
+                        1,
+                        0,
+                        abilities,
+                        new MonsterAttributes(14, 8, 8, 5),
+                        new MonsterAttributes(14, 8, 8, 5),
+                        List.of()),
+                new Monster("2023-06-05T17:02:40.357Z",
+                        "023-06-05T17:02:40.357Z",
+                        "647e1530866ace3595866900",
+                        "647e15308c1bb6a91fb57321",
+                        3,
                         1,
                         0,
                         abilities,
@@ -75,7 +107,26 @@ public class MonstersListControllerTest extends ApplicationTest {
                         List.of("fire"),
                         "Flamander is a small, agile monster that lives in the hot deserts of the world.")
         ));
+        when(presetsService.getMonster(2)).thenReturn(Observable.just(
+                new MonsterTypeDto(
+                        2,
+                        "Flamander_2",
+                        "Flamander_1.png",
+                        List.of("fire"),
+                        "Flamander is a small, agile monster that lives in the hot deserts of the world.")
+        ));
+        when(presetsService.getMonster(3)).thenReturn(Observable.just(
+                new MonsterTypeDto(
+                        3,
+                        "Flamander_3",
+                        "Flamander_1.png",
+                        List.of("fire"),
+                        "Flamander is a small, agile monster that lives in the hot deserts of the world.")
+        ));
         when(presetsService.getMonsterImage(1)).thenReturn(Observable.just(ResponseBody.create(null, new byte[0])));
+        when(presetsService.getMonsterImage(2)).thenReturn(Observable.just(ResponseBody.create(null, new byte[0])));
+        when(presetsService.getMonsterImage(3)).thenReturn(Observable.just(ResponseBody.create(null, new byte[0])));
+
         when(trainerStorageProvider.get().getRegion()).thenReturn(new Region(
                 "2023-05-22T17:51:46.772Z",
                 "2023-05-22T17:51:46.772Z",
@@ -100,7 +151,7 @@ public class MonstersListControllerTest extends ApplicationTest {
                         List.of(),
                         List.of())
         ));
-        when(trainerStorage.getTrainer()).thenReturn(new Trainer(
+        final Trainer trainer = new Trainer(
                 "2023-06-05T17:02:40.332Z",
                 "2023-06-12T22:14:00.005Z",
                 "647e15308c1bb6a91fb57321",
@@ -109,24 +160,170 @@ public class MonstersListControllerTest extends ApplicationTest {
                 "Hans",
                 "Premade_Character_04.png",
                 0,
-                List.of("647e1530866ace3595866db2"),
-                List.of(1,2),
-                List.of("647e1530866ace3595866db2"),
+                Arrays.asList("647e1530866ace3595866db2", "647e1530866ace3595866500"),
+                List.of(1, 2),
+                List.of("647e1530866ace3595866db2", "647e1530866ace3595866900"),
                 "645e32c6866ace359554a7fa",
                 45,
                 23,
                 0,
                 null
-        ));
+        );
+        when(trainerStorage.getTrainer()).thenReturn(trainer);
+        when(trainerStorageProvider.get().getTrainer()).thenReturn(trainer);
+
         app.start(stage);
         app.show(monsterListController);
+        monsterListController.init(ingameController, monsterListController.monsterListVBox);
     }
 
     @Test
-    void controllerTest() {
-        moveTo("Name: Flamander");
-        moveTo("Level: 1");
-        moveTo("Remove from Team");
-        moveTo("View Details");
+    void onCloseMonsterList() {
+        final StackPane root = mock(StackPane.class);
+        when(ingameController.getRoot()).thenReturn(root);
+        when(root.getChildren()).thenReturn(FXCollections. observableArrayList());
+        clickOn("#closeButton");
+    }
+
+    @Test
+    void changeOrderDown() {
+        when(trainersService.updateTrainer(any(), any(), any(), any(), any()))
+                .thenReturn(Observable.just(
+                        new Trainer(
+                                "2023-06-05T17:02:40.332Z",
+                                "2023-06-12T22:14:00.005Z",
+                                "647e15308c1bb6a91fb57321",
+                                "645e32c6866ace359554a7ec",
+                                "647a466a494a75c31bb05921",
+                                "Hans",
+                                "Premade_Character_04.png",
+                                0,
+                                List.of("647e1530866ace3595866500", "647e1530866ace3595866db2"),
+                                List.of(1, 2),
+                                List.of("647e1530866ace3595866db2"),
+                                "645e32c6866ace359554a7fa",
+                                45,
+                                23,
+                                0,
+                                null
+                        )
+                ));
+
+        assertEquals(monsters.get(0), monsterListController.activeMonstersList.get(0));
+        assertEquals(monsters.get(1), monsterListController.activeMonstersList.get(1));
+
+        clickOn("#arrowDown647e1530866ace3595866500");
+
+        assertEquals(monsters.get(0), monsterListController.activeMonstersList.get(0));
+        assertEquals(monsters.get(1), monsterListController.activeMonstersList.get(1));
+
+
+        clickOn("#arrowDown647e1530866ace3595866db2");
+
+        assertEquals(monsters.get(0), monsterListController.activeMonstersList.get(1));
+        assertEquals(monsters.get(1), monsterListController.activeMonstersList.get(0));
+    }
+
+
+    @Test
+    void changeOrderUp() {
+        when(trainersService.updateTrainer(any(), any(), any(), any(), any()))
+                .thenReturn(Observable.just(
+                        new Trainer(
+                                "2023-06-05T17:02:40.332Z",
+                                "2023-06-12T22:14:00.005Z",
+                                "647e15308c1bb6a91fb57321",
+                                "645e32c6866ace359554a7ec",
+                                "647a466a494a75c31bb05921",
+                                "Hans",
+                                "Premade_Character_04.png",
+                                0,
+                                List.of("647e1530866ace3595866db2", "647e1530866ace3595866500"),
+                                List.of(1, 2),
+                                List.of("647e1530866ace3595866db2"),
+                                "645e32c6866ace359554a7fa",
+                                45,
+                                23,
+                                0,
+                                null
+                        )
+                ));
+
+        assertEquals(monsters.get(0), monsterListController.activeMonstersList.get(0));
+        assertEquals(monsters.get(1), monsterListController.activeMonstersList.get(1));
+
+        clickOn("#arrowUp647e1530866ace3595866db2");
+
+        assertEquals(monsters.get(0), monsterListController.activeMonstersList.get(0));
+        assertEquals(monsters.get(1), monsterListController.activeMonstersList.get(1));
+
+        clickOn("#arrowUp647e1530866ace3595866500");
+
+        assertEquals(monsters.get(0), monsterListController.activeMonstersList.get(1));
+        assertEquals(monsters.get(1), monsterListController.activeMonstersList.get(0));
+    }
+
+    @Test
+    void removeFromTeam() {
+
+        clickOn("#removeFromTeamButton647e1530866ace3595866500");
+    }
+
+    @Test
+    void addToTeam() {
+        clickOn("#othersTab");
+        assertEquals(monsterListController.otherMonstersList.size(), 1);
+        assertEquals(monsterListController.activeMonstersList.size(), 2);
+
+        /*
+        clickOn("#removeFromTeamButton647e1530866ace3595866900");
+
+        assertEquals(monsterListController.activeMonstersList.size(), 3);
+        assertEquals(monsterListController.otherMonstersList.size(), 0);
+
+        try {
+            sleep(5000);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+
+         */
+    }
+
+    @Test
+    void createLimitPopUp() {
+        final StackPane root = mock(StackPane.class);
+        when(ingameController.getRoot()).thenReturn(root);
+        when(root.getChildren()).thenReturn(FXCollections. observableArrayList());
+        when(trainerStorageProvider.get().getTrainer()).thenReturn(
+                new Trainer(
+                        "2023-06-05T17:02:40.332Z",
+                        "2023-06-12T22:14:00.005Z",
+                        "647e15308c1bb6a91fb57321",
+                        "645e32c6866ace359554a7ec",
+                        "647a466a494a75c31bb05921",
+                        "Hans",
+                        "Premade_Character_04.png",
+                        0,
+                        List.of("647e1530866ace3595866db2", "647e1530866ace3595866db3", "647e1530866ace3595866db4", "647e1530866ace3595866db5", "647e1530866ace3595866db6", "647e1530866ace3595866500"),
+                        List.of(1, 2),
+                        List.of("647e1530866ace3595866db2", "647e1530866ace3595866900"),
+                        "645e32c6866ace359554a7fa",
+                        45,
+                        23,
+                        0,
+                        null
+                )
+        );
+        clickOn("#othersTab");
+        clickOn("#removeFromTeamButton647e1530866ace3595866900");
+
+        try {
+            sleep(5000);
+        }
+        catch (Exception e) {
+            e.printStackTrace();
+        }
+
     }
 }
